--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>spring-mongo-rest-api</module>
         <module>elastic-search</module>
+        <module>Spring-datajpa-postgresql</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
