--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
         <module>Alaket Practice</module>
         <module>spring-boot-api-doc</module>
         <module>spring-boot-rabbitmq</module>
+        <module>spring-boot-dockerization</module>
+        <module>spring-boot-aop</module>
+        <module>spring-boot-graphql</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
